fix overflow issue

--- a/css/main.css
+++ b/css/main.css
@@ -384,6 +384,9 @@ body.lock {
     z-index: -1;
 }
 @media (max-width:1200px){
+    .spot {
+        display: none;
+    }
     .services {
         padding-top: 140px;
         padding-bottom: 160px;
